--- a/owner/index.html
+++ b/owner/index.html
@@ -1,65 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>ABR Owner Panel</title>
+    <meta charset="UTF-8">
+    <title>ABR Owner Console</title>
     <style>
-        body { background: #020617; color: white; font-family: sans-serif; padding: 20px; display: flex; flex-direction: column; align-items: center; }
-        .card { background: #1e293b; padding: 20px; border-radius: 12px; width: 100%; max-width: 450px; margin-bottom: 30px; border: 1px solid #334155; }
-        h2 { color: #38bdf8; margin-top: 0; }
-        label { display: block; margin: 10px 0 5px; color: #94a3b8; }
-        input, select, textarea { width: 100%; padding: 10px; background: #0f172a; border: 1px solid #334155; color: white; border-radius: 6px; box-sizing: border-box; }
-        button { width: 100%; padding: 12px; background: #38bdf8; border: none; border-radius: 6px; color: #020617; font-weight: bold; margin-top: 15px; cursor: pointer; }
+        body { background: #020617; color: white; font-family: 'Segoe UI', sans-serif; padding: 20px; display: flex; flex-direction: column; align-items: center; }
+        .card { background: #1e293b; padding: 20px; border-radius: 12px; width: 100%; max-width: 500px; margin-bottom: 25px; border: 1px solid #334155; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.5); }
+        h2 { color: #38bdf8; margin-top: 0; font-size: 1.2rem; }
+        input { width: 100%; padding: 12px; background: #0f172a; border: 1px solid #334155; color: white; border-radius: 8px; box-sizing: border-box; margin-bottom: 12px; }
+        button { width: 100%; padding: 12px; background: #38bdf8; border: none; border-radius: 8px; color: #020617; font-weight: bold; cursor: pointer; transition: 0.2s; }
         button:hover { background: #7dd3fc; }
+        .staff-item { background: #0f172a; padding: 12px; border-radius: 8px; margin-top: 10px; display: flex; justify-content: space-between; align-items: center; border: 1px solid #1e293b; }
+        .del-btn { background: #ef4444; color: white; padding: 6px 12px; width: auto; font-size: 12px; margin: 0; }
+        .del-btn:hover { background: #b91c1c; }
     </style>
 </head>
 <body>
 
     <div class="card">
-        <h2>📢 Post Official Update</h2>
-        <form id="updateForm">
-            <label>Type</label>
-            <select id="upType"><option>Announcement</option><option>Score</option></select>
-            <label>Message</label>
-            <textarea id="upMsg" required></textarea>
-            <button type="submit" id="btn1">Publish Update</button>
+        <h2>👥 Add New Staff Member</h2>
+        <form id="staffForm">
+            <input type="text" id="stName" placeholder="Username" required>
+            <input type="number" id="stID" placeholder="User ID Number" required>
+            <input type="text" id="stRole" placeholder="Role (e.g. Senior Admin)" required>
+            <button type="submit" id="addBtn">Add to Database</button>
         </form>
     </div>
 
     <div class="card">
-        <h2>👥 Add Staff Member</h2>
-        <form id="staffForm">
-            <label>Name</label>
-            <input type="text" id="stName" required>
-            <label>Role</label>
-            <select id="stRole"><option>Admin</option><option>Moderator</option><option>Developer</option></select>
-            <button type="submit" id="btn2">Add Staff</button>
-        </form>
+        <h2>🛠️ Manage Staff List</h2>
+        <div id="manageList">Loading...</div>
     </div>
 
     <script>
-        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24t';
+        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24?sheet=staff';
 
-        // Script for Updates
-        document.getElementById('updateForm').onsubmit = e => {
+        // Load and Show Staff
+        function loadStaff() {
+            fetch(API).then(res => res.json()).then(data => {
+                const list = document.getElementById('manageList');
+                if (data.length === 0) { list.innerHTML = "No staff found."; return; }
+                list.innerHTML = data.map(s => `
+                    <div class="staff-item">
+                        <div>
+                            <b>${s.name}</b> <small style="color:#94a3b8">#${s.id}</small><br>
+                            <span style="color:#38bdf8; font-size: 0.85rem;">${s.role}</span>
+                        </div>
+                        <button class="del-btn" onclick="deleteStaff('${s.name}')">Remove</button>
+                    </div>
+                `).join('');
+            });
+        }
+
+        // Add Staff Logic
+        document.getElementById('staffForm').onsubmit = e => {
             e.preventDefault();
-            document.getElementById('btn1').innerText = "Sending...";
+            document.getElementById('addBtn').innerText = "Adding...";
             fetch(API, {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({data: [{type: document.getElementById('upType').value, message: document.getElementById('upMsg').value, date: new Date().toLocaleString()}]})
-            }).then(() => { alert("Update Posted!"); location.reload(); });
+                body: JSON.stringify({data: [{
+                    name: document.getElementById('stName').value,
+                    id: document.getElementById('stID').value,
+                    role: document.getElementById('stRole').value,
+                    date_added: new Date().toLocaleDateString()
+                }]})
+            }).then(() => location.reload());
         };
 
-        // Script for Staff Database
-        document.getElementById('staffForm').onsubmit = e => {
-            e.preventDefault();
-            document.getElementById('btn2').innerText = "Adding...";
-            fetch("https://sheetdb.io/api/v1/nsqoeik98h24t?sheet=staff", {
-                method: 'POST',
-                headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({data: [{name: document.getElementById('stName').value, role: document.getElementById('stRole').value, date_added: new Date().toLocaleDateString()}]})
-            }).then(() => { alert("Staff Added!"); location.reload(); });
-        };
+        // Delete Staff Logic
+        function deleteStaff(name) {
+            if(confirm("Remove " + name + " from staff?")) {
+                fetch(`${API}/name/${name}`, { method: 'DELETE' })
+                .then(() => location.reload());
+            }
+        }
+
+        loadStaff();
     </script>
+</body>
+</html>
 </body>
 </html>
