--- a/owner/index.html
+++ b/owner/index.html
@@ -2,61 +2,73 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ABR Owner Console</title>
+    <title>ABR Owner Control Center</title>
     <style>
         body { background: #020617; color: white; font-family: 'Segoe UI', sans-serif; padding: 20px; display: flex; flex-direction: column; align-items: center; }
-        .card { background: #1e293b; padding: 20px; border-radius: 12px; width: 100%; max-width: 500px; margin-bottom: 25px; border: 1px solid #334155; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.5); }
-        h2 { color: #38bdf8; margin-top: 0; font-size: 1.2rem; }
-        input { width: 100%; padding: 12px; background: #0f172a; border: 1px solid #334155; color: white; border-radius: 8px; box-sizing: border-box; margin-bottom: 12px; }
-        button { width: 100%; padding: 12px; background: #38bdf8; border: none; border-radius: 8px; color: #020617; font-weight: bold; cursor: pointer; transition: 0.2s; }
+        .card { background: #1e293b; padding: 20px; border-radius: 12px; width: 100%; max-width: 500px; margin-bottom: 25px; border: 1px solid #334155; }
+        h2 { color: #38bdf8; margin-top: 0; border-bottom: 1px solid #334155; padding-bottom: 10px; }
+        input, textarea, select { width: 100%; padding: 12px; background: #0f172a; border: 1px solid #334155; color: white; border-radius: 8px; box-sizing: border-box; margin-bottom: 12px; }
+        button { width: 100%; padding: 12px; background: #38bdf8; border: none; border-radius: 8px; color: #020617; font-weight: bold; cursor: pointer; }
         button:hover { background: #7dd3fc; }
-        .staff-item { background: #0f172a; padding: 12px; border-radius: 8px; margin-top: 10px; display: flex; justify-content: space-between; align-items: center; border: 1px solid #1e293b; }
-        .del-btn { background: #ef4444; color: white; padding: 6px 12px; width: auto; font-size: 12px; margin: 0; }
-        .del-btn:hover { background: #b91c1c; }
+        .staff-item { background: #0f172a; padding: 10px; border-radius: 8px; margin-top: 8px; display: flex; justify-content: space-between; align-items: center; }
+        .del-btn { background: #ef4444; color: white; width: auto; padding: 5px 10px; font-size: 11px; }
     </style>
 </head>
 <body>
 
     <div class="card">
-        <h2>👥 Add New Staff Member</h2>
-        <form id="staffForm">
-            <input type="text" id="stName" placeholder="Username" required>
-            <input type="number" id="stID" placeholder="User ID Number" required>
-            <input type="text" id="stRole" placeholder="Role (e.g. Senior Admin)" required>
-            <button type="submit" id="addBtn">Add to Database</button>
+        <h2>📢 Post Official Update</h2>
+        <form id="msgForm">
+            <select id="msgType">
+                <option>📢 Announcement</option>
+                <option>📊 Score Update</option>
+                <option>📝 General Note</option>
+            </select>
+            <textarea id="msgText" placeholder="Type message here..." required></textarea>
+            <button type="submit" id="msgBtn">Publish to View Page</button>
         </form>
     </div>
 
     <div class="card">
-        <h2>🛠️ Manage Staff List</h2>
-        <div id="manageList">Loading...</div>
+        <h2>👥 Add Staff Member</h2>
+        <form id="staffForm">
+            <input type="text" id="stName" placeholder="Username" required>
+            <input type="number" id="stID" placeholder="User ID" required>
+            <input type="text" id="stRole" placeholder="Role (Type anything)" required>
+            <button type="submit" id="staffBtn">Add to Database</button>
+        </form>
+    </div>
+
+    <div class="card">
+        <h2>🛠️ Manage Staff</h2>
+        <div id="manageList">Loading staff...</div>
     </div>
 
     <script>
-        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24?sheet=staff';
+        const baseAPI = 'https://sheetdb.io/api/v1/nsqoeik98h24';
 
-        // Load and Show Staff
-        function loadStaff() {
-            fetch(API).then(res => res.json()).then(data => {
-                const list = document.getElementById('manageList');
-                if (data.length === 0) { list.innerHTML = "No staff found."; return; }
-                list.innerHTML = data.map(s => `
-                    <div class="staff-item">
-                        <div>
-                            <b>${s.name}</b> <small style="color:#94a3b8">#${s.id}</small><br>
-                            <span style="color:#38bdf8; font-size: 0.85rem;">${s.role}</span>
-                        </div>
-                        <button class="del-btn" onclick="deleteStaff('${s.name}')">Remove</button>
-                    </div>
-                `).join('');
-            });
-        }
+        // 1. POST MESSAGE (To Sheet1)
+        document.getElementById('msgForm').onsubmit = e => {
+            e.preventDefault();
+            const btn = document.getElementById('msgBtn');
+            btn.innerText = "Publishing...";
+            fetch(baseAPI + '?sheet=Sheet1', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({data: [{
+                    type: document.getElementById('msgType').value,
+                    message: document.getElementById('msgText').value,
+                    date: new Date().toLocaleString()
+                }]})
+            }).then(() => { alert("Update Published!"); location.reload(); });
+        };
 
-        // Add Staff Logic
+        // 2. ADD STAFF (To staff tab)
         document.getElementById('staffForm').onsubmit = e => {
             e.preventDefault();
-            document.getElementById('addBtn').innerText = "Adding...";
-            fetch(API, {
+            const btn = document.getElementById('staffBtn');
+            btn.innerText = "Adding...";
+            fetch(baseAPI + '?sheet=staff', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({data: [{
@@ -65,20 +77,31 @@
                     role: document.getElementById('stRole').value,
                     date_added: new Date().toLocaleDateString()
                 }]})
-            }).then(() => location.reload());
+            }).then(() => { alert("Staff Added!"); location.reload(); });
         };
 
-        // Delete Staff Logic
+        // 3. LOAD STAFF LIST
+        function loadStaff() {
+            fetch(baseAPI + '?sheet=staff').then(res => res.json()).then(data => {
+                const list = document.getElementById('manageList');
+                list.innerHTML = data.map(s => `
+                    <div class="staff-item">
+                        <div><b>${s.name}</b> <br><small>${s.role}</small></div>
+                        <button class="del-btn" onclick="deleteStaff('${s.name}')">Delete</button>
+                    </div>
+                `).join('');
+            });
+        }
+
+        // 4. DELETE STAFF
         function deleteStaff(name) {
-            if(confirm("Remove " + name + " from staff?")) {
-                fetch(`${API}/name/${name}`, { method: 'DELETE' })
+            if(confirm("Remove " + name + "?")) {
+                fetch(`${baseAPI}/name/${name}?sheet=staff`, { method: 'DELETE' })
                 .then(() => location.reload());
             }
         }
 
         loadStaff();
     </script>
-</body>
-</html>
 </body>
 </html>
