--- a/owner/index.html
+++ b/owner/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <script>
-        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24';
+        const API = 'https://sheetdb.io/api/v1/nsqoeik98h24t';
 
         // POST MESSAGE
         document.getElementById('msgForm').onsubmit = e => {
@@ -79,7 +79,7 @@
 
         // LOAD STAFF LIST
         function loadStaff() {
-            fetch(API + '?sheet=staff').then(res => res.json()).then(data => {
+            fetch('https://sheetdb.io/api/v1/nsqoeik98h24t?sheet=staff').then(res => res.json()).then(data => {
                 const list = document.getElementById('manageList');
                 // Filters out the header row if it accidentally shows up
                 list.innerHTML = data.filter(s => s.name !== 'name').map(s => `
